--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
     "aos": "^2.3.4",
     "framer-motion": "^11.11.1",
     "react": "^18.3.1",
