--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,13 +14,14 @@
     "@stripe/react-stripe-js": "^3.5.1",
     "@stripe/stripe-js": "^6.1.0",
     "aos": "^2.3.4",
+    "axios": "^1.8.4",
     "axois": "^0.0.1-security",
     "framer-motion": "^11.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^7.5.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
